UPDATE: swagger output file
